# rnnlib-mkl

./: .gitignore  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
src/: Container.hpp  Helpers.hpp  Makefile.in  Matrix.hpp
src/.deps/: DataExporter.Po  Main.Po  Random.Po
